Add jdk-target profile that enables to compile for target=${jdk-release}
- fix testsuite code to not use sun.* internal classes